--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,10 @@
     <spotbugs.annotations>3.1.12</spotbugs.annotations>
     <commons.lang.version>3.9</commons.lang.version>
     <commons.io.version>2.6</commons.io.version>
-    <commons.digester.version>3.2</commons.digester.version>
+    <commons.digester.version>2.1</commons.digester.version>
+    <commons.digester3.version>3.2</commons.digester3.version>
     <commons.text.version>1.8</commons.text.version>
+    <commons.validator.version>1.6</commons.validator.version>
     <eclipse-collections.version>9.2.0</eclipse-collections.version>
     <j2html.version>1.4.0</j2html.version>
 
@@ -125,6 +127,11 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>commons-digester</groupId>
+        <artifactId>commons-digester</artifactId>
+        <version>${commons.digester.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>credentials</artifactId>
@@ -227,6 +234,11 @@
       <version>${commons.lang.version}</version>
     </dependency>
     <dependency>
+      <groupId>commons-validator</groupId>
+      <artifactId>commons-validator</artifactId>
+      <version>${commons.validator.version}</version>
+    </dependency>
+    <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>${commons.io.version}</version>
@@ -234,7 +246,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-digester3</artifactId>
-      <version>${commons.digester.version}</version>
+      <version>${commons.digester3.version}</version>
       <exclusions>
         <exclusion>
           <artifactId>asm</artifactId>
