--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>warnings-ng</artifactId>
   <packaging>hpi</packaging>
   <name>Warnings Next Generation Plugin</name>
-  <version>7.1.3-SNAPSHOT</version>
+  <version>7.2.0-SNAPSHOT</version>
   <url>https://github.com/jenkinsci/warnings-ng-plugin</url>
   <description>Jenkins Warnings Next Generation plugin collects compiler warnings or issues reported by static
     analysis tools and visualizes the results. It has built-in support for numerous static analysis tools
@@ -893,10 +893,23 @@
             </revapi.ignore>
             <revapi.ignore>
               <item>
-                <regex>false</regex>
-                <code>java.method.parameterTypeChanged</code>
-                <classSimpleName>WarningsPluginConfiguration</classSimpleName>
-                <justification>Nobody should depend on that method</justification>
+                <code>java.annotation.removed</code>
+                <classSimpleName>IssuesDetail</classSimpleName>
+                <justification>Annotation was just wrong.</justification>
+              </item>
+            </revapi.ignore>
+            <revapi.ignore>
+              <item>
+                <code>java.method.added</code>
+                <methodName>clearRepeatableProperties</methodName>
+                <justification>Required for bug fix.</justification>
+              </item>
+            </revapi.ignore>
+            <revapi.ignore>
+              <item>
+                <code>java.method.added</code>
+                <classSimpleName>GlobalConfigurationItem</classSimpleName>
+                <justification>Required for bug fix.</justification>
               </item>
             </revapi.ignore>
           </analysisConfiguration>
