--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -14,9 +14,9 @@
   <name>Warnings Next Generation Plugin</name>
   <version>${revision}${changelist}</version>
 
-  <description>Jenkins Warnings Next Generation plugin collects compiler warnings or issues reported by static
-    analysis tools and visualizes the results. It has built-in support for numerous static analysis tools
-    (including several compilers), see the list of supported report formats.
+  <description>Jenkins Warnings Next Generation plugin collects compiler warnings or issues reported by static analysis
+    tools and visualizes the results. It has built-in support for numerous static analysis tools (including several
+    compilers), see the list of supported report formats.
   </description>
   <url>https://github.com/jenkinsci/warnings-ng-plugin</url>
 
