--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -126,7 +126,7 @@ jobs:
           BROWSER: firefox-container
         run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
-  miscenaleous:
+  miscellaneous:
     runs-on: [ubuntu-latest]
     name: Miscellaneous UI tests
 
