--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
     <java.version>1.8</java.version>
     <maven-compiler-plugin.version>3.9.0</maven-compiler-plugin.version>
     <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
   </properties>
 
   <build>
