--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -567,7 +567,7 @@
           </packages>
           <excludes combine.children="append">
             <exclude>.*Thresholds</exclude>
-            <exclude>.*Test</exclude>
+            <exclude>.*Test.*</exclude>
             <exclude>.*TaskScanner.*</exclude>
           </excludes>
           <entryPointClassPackage>io.jenkins.plugins.analysis.core.assertions</entryPointClassPackage>
