--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,15 +17,15 @@ jobs:
     name: on ${{ matrix.platform }}
 
     steps:
-    - uses: actions/checkout@v2.3.4
+    - uses: actions/checkout@v3
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         distribution: 'temurin'
         java-version: '11'
         check-latest: true
-#       cache: 'maven'
+        cache: 'maven'
     - name: Build with Maven
       env:
-        BROWSER: firefox-container
+        BROWSER: chrome-container
       run: mvn -V -ntp clean verify --file pom.xml '-Djenkins.test.timeout=5000' '-Dgpg.skip'
