--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -15,9 +15,12 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
+          distribution: 'temurin'
+          java-version: '11'
+          check-latest: true
+          cache: 'maven'
       - name: Generate coverage with JaCoCo
         env:
           BROWSER: firefox-container
