--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -19,6 +19,7 @@
     <jenkins.version>2.334</jenkins.version>
     <json-smart.version>2.3</json-smart.version>
     <json-unit-assertj.version>2.34.0</json-unit-assertj.version>
+    <module.name>${project.groupId}.warnings.ui.tests</module.name>
   </properties>
 
   <dependencyManagement>
