--- a/.github/workflows/check-md-links.yml
+++ b/.github/workflows/check-md-links.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - name: fix permission issue
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - uses: gaurav-nelson/github-action-markdown-link-check@v1
         with:
           check-modified-files-only: 'yes'
