--- a/.github/workflows/check-md-links.yml
+++ b/.github/workflows/check-md-links.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: fix permission issue
-        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+        run: git config --global --add safe.directory /github/workspace
       - uses: gaurav-nelson/github-action-markdown-link-check@v1
         with:
           check-modified-files-only: 'yes'
