--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -20,6 +20,7 @@
     <json-smart.version>2.3</json-smart.version>
     <json-unit-assertj.version>2.34.0</json-unit-assertj.version>
     <module.name>${project.groupId}.warnings.ui.tests</module.name>
+    <codingstyle.config.version>2.24.0</codingstyle.config.version>
   </properties>
 
   <dependencyManagement>
