Use responsive columns by default in all tables.

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -34,7 +34,7 @@
     <plugin-util-api.version>2.17.0</plugin-util-api.version>
     <pull-request-monitoring.version>1.7.8</pull-request-monitoring.version>
     <prism-api.version>1.28.0-2</prism-api.version>
-    <data-tables-api.version>1.11.4-4</data-tables-api.version>
+    <data-tables-api.version>1.12.1-1-rc699.9872a30495f2</data-tables-api.version>
 
     <eclipse-collections.version>9.2.0</eclipse-collections.version>
 
@@ -127,6 +127,7 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>data-tables-api</artifactId>
+      <version>${data-tables-api.version}</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
