--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -22,7 +22,7 @@
   <url>https://github.com/jenkinsci/warnings-ng-plugin</url>
 
   <properties>
-    <revision>9.13.0</revision
+    <revision>9.13.0</revision>
     <changelist>-SNAPSHOT</changelist>
     <module.name>${project.groupId}.warnings.ng</module.name>
 
