--- a/plugin/src/test/resources/io/jenkins/plugins/analysis/warnings/integrations/job-dsl-warnings-ng.yaml
+++ b/plugin/src/test/resources/io/jenkins/plugins/analysis/warnings/integrations/job-dsl-warnings-ng.yaml
@@ -6,7 +6,6 @@ jobs:
                     trendChartType('NONE')
                     aggregatingResults(true)
                     blameDisabled(true)
-                    forensicsDisabled(true)
                     enabledForFailure(true)
                     quiet(false)
                     healthy(10)
@@ -20,10 +19,10 @@ jobs:
                     unhealthy(50)
                     referenceJobName('test-job')
                     qualityGates {
-                        qualityGate {
+                        warningsQualityGate {
                             threshold(10)
                             type('TOTAL')
-                            unstable(true)
+                            criticality('FAILURE')
                         }
                     }
                     tools {
